--- a/environment.yml
+++ b/environment.yml
@@ -6,30 +6,30 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.12
-  - attr=2.5.1
   - blinker=1.8.2
   - brotli=1.1.0
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2024.6.2
+  - ca-certificates=2024.8.30
   - cairo=1.18.0
-  - certifi=2024.6.2
-  - cffi=1.16.0
+  - certifi=2024.8.30
+  - cffi=1.17.1
   - charset-normalizer=3.3.2
   - click=8.1.7
   - colorama=0.4.6
-  - contourpy=1.2.1
-  - cryptography=42.0.8
+  - contourpy=1.3.0
+  - cryptography=43.0.1
   - cycler=0.12.1
   - daiquiri=3.0.0
   - dbus=1.13.6
   - dnspython=2.6.1
   - dominate=2.9.1
-  - email-validator=2.1.1
-  - email_validator=2.1.1
-  - exceptiongroup=1.2.0
-  - expat=2.6.2
+  - double-conversion=3.3.0
+  - email-validator=2.2.0
+  - email_validator=2.2.0
+  - exceptiongroup=1.2.2
+  - expat=2.6.3
   - flask=3.0.3
   - flask-bootstrap=3.3.7.1
   - flask-login=0.6.3
@@ -41,148 +41,128 @@ dependencies:
   - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.53.0
+  - fonttools=4.53.1
   - freetype=2.12.1
-  - gettext=0.22.5
-  - gettext-tools=0.22.5
-  - glib=2.80.2
-  - glib-tools=2.80.2
   - graphite2=1.3.13
   - greenlet=3.0.3
-  - gst-plugins-base=1.24.4
-  - gstreamer=1.24.4
-  - harfbuzz=8.5.0
+  - h2=4.1.0
+  - harfbuzz=9.0.0
+  - hpack=4.0.0
+  - hyperframe=6.0.1
   - icu=73.2
-  - idna=3.7
-  - importlib-metadata=7.1.0
+  - idna=3.8
+  - importlib-metadata=8.4.0
   - iniconfig=2.0.0
   - itsdangerous=2.2.0
   - jansson=2.14
   - jinja2=3.1.4
   - keyutils=1.6.1
-  - kiwisolver=1.4.5
-  - krb5=1.21.2
-  - lame=3.100
+  - kiwisolver=1.4.7
+  - krb5=1.21.3
   - lcms2=2.16
   - ld_impl_linux-64=2.40
   - ldap3=2.9.1
   - lerc=4.0.0
-  - libasprintf=0.22.5
-  - libasprintf-devel=0.22.5
   - libblas=3.9.0
   - libbrotlicommon=1.1.0
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
-  - libcap=2.69
   - libcblas=3.9.0
-  - libclang-cpp15=15.0.7
-  - libclang13=18.1.7
+  - libclang-cpp18.1=18.1.8
+  - libclang13=18.1.8
   - libcups=2.3.3
-  - libdeflate=1.20
+  - libdeflate=1.21
+  - libdrm=2.4.123
   - libedit=3.1.20191231
-  - libevent=2.1.12
-  - libexpat=2.6.2
+  - libexpat=2.6.3
   - libffi=3.4.2
-  - libflac=1.4.3
-  - libgcc-ng=13.2.0
-  - libgcrypt=1.10.3
-  - libgettextpo=0.22.5
-  - libgettextpo-devel=0.22.5
-  - libgfortran-ng=13.2.0
-  - libgfortran5=13.2.0
+  - libgcc=14.1.0
+  - libgcc-ng=14.1.0
+  - libgfortran=14.1.0
+  - libgfortran-ng=14.1.0
+  - libgfortran5=14.1.0
   - libglib=2.80.2
-  - libgomp=13.2.0
-  - libgpg-error=1.49
+  - libgomp=14.1.0
   - libiconv=1.17
   - libjpeg-turbo=3.0.0
   - liblapack=3.9.0
-  - libllvm15=15.0.7
-  - libllvm18=18.1.7
+  - libllvm18=18.1.8
   - libnsl=2.0.1
-  - libogg=1.3.4
   - libopenblas=0.3.27
-  - libopus=1.3.1
+  - libpciaccess=0.18
   - libpng=1.6.43
-  - libpq=16.3
-  - libsndfile=1.2.2
+  - libpq=16.4
   - libsodium=1.0.18
-  - libsqlite=3.46.0
-  - libstdcxx-ng=13.2.0
-  - libsystemd0=255
+  - libsqlite=3.46.1
+  - libstdcxx=14.1.0
+  - libstdcxx-ng=14.1.0
   - libtiff=4.6.0
   - libuuid=2.38.1
-  - libvorbis=1.3.7
   - libwebp-base=1.4.0
-  - libxcb=1.15
+  - libxcb=1.16
   - libxcrypt=4.4.36
   - libxkbcommon=1.7.0
   - libxml2=2.12.7
   - libxslt=1.1.39
   - libzlib=1.3.1
-  - lxml=5.2.2
-  - lz4-c=1.9.4
+  - lxml=5.3.0
   - markupsafe=2.1.5
-  - matplotlib=3.8.4
-  - matplotlib-base=3.8.4
-  - mpg123=1.32.6
+  - matplotlib=3.9.2
+  - matplotlib-base=3.9.2
   - munkres=1.1.4
   - mysql-common=8.3.0
   - mysql-libs=8.3.0
   - ncurses=6.5
-  - nspr=4.35
-  - nss=3.100
-  - numpy=1.26.4
+  - numpy=2.1.1
   - openjpeg=2.5.2
-  - openssl=3.3.1
+  - openssl=3.3.2
   - packaging=24.1
   - pcre=8.45
   - pcre2=10.43
   - pendulum=3.0.0
-  - pillow=10.3.0
-  - pip=24.0
+  - pillow=10.4.0
+  - pip=24.2
   - pixman=0.43.2
   - pluggy=1.5.0
-  - ply=3.11
   - psycopg2=2.9.9
   - pthread-stubs=0.4
-  - pulseaudio-client=17.0
   - pyasn1=0.6.0
   - pycparser=2.22
   - pynacl=1.5.0
-  - pyparsing=3.1.2
-  - pyqt=5.15.9
-  - pyqt5-sip=12.12.2
+  - pyparsing=3.1.4
+  - pyside6=6.7.2
   - pysocks=1.7.1
-  - pytest=8.2.2
+  - pytest=8.3.2
   - python=3.11.9
   - python-dateutil=2.9.0
   - python-json-logger=2.0.7
   - python_abi=3.11
-  - qt-main=5.15.8
+  - qhull=2020.2
+  - qt6-main=6.7.2
   - readline=8.2
   - requests=2.32.3
-  - setuptools=70.0.0
-  - sip=6.7.12
+  - setuptools=73.0.1
   - six=1.16.0
   - sniffio=1.3.1
   - sqlalchemy=1.4.46
-  - time-machine=2.14.1
+  - time-machine=2.15.0
   - tk=8.6.13
-  - toml=0.10.2
   - tomli=2.0.1
   - tornado=6.4.1
   - tzdata=2024a
-  - urllib3=2.2.1
+  - urllib3=2.2.2
   - uwsgi=2.0.23
   - visitor=0.1.3
-  - werkzeug=3.0.3
-  - wheel=0.43.0
+  - wayland=1.23.1
+  - werkzeug=3.0.4
+  - wheel=0.44.0
   - wtforms=3.1.2
-  - xcb-util=0.4.0
+  - xcb-util=0.4.1
+  - xcb-util-cursor=0.1.4
   - xcb-util-image=0.4.0
-  - xcb-util-keysyms=0.4.0
-  - xcb-util-renderutil=0.3.9
-  - xcb-util-wm=0.4.1
+  - xcb-util-keysyms=0.4.1
+  - xcb-util-renderutil=0.3.10
+  - xcb-util-wm=0.4.2
   - xkeyboard-config=2.42
   - xorg-kbproto=1.0.7
   - xorg-libice=1.1.1
@@ -194,14 +174,14 @@ dependencies:
   - xorg-libxrender=0.9.11
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
-  - xorg-xf86vidmodeproto=2.3.1
   - xorg-xproto=7.0.31
   - xz=5.2.6
   - yaml=0.2.5
-  - zipp=3.19.2
+  - zipp=3.20.1
   - zlib=1.3.1
+  - zstandard=0.23.0
   - zstd=1.5.6
   - pip:
-      - pastaplus-soh==2023.2.22
+      - pastaplus-soh==2024.9.5
       - sniffer==2020.8.4
 prefix: /home/servilla/miniconda3/envs/dashboard
