--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,70 @@
 blinker==1.8.2
 Brotli==1.1.0
-certifi==2024.6.2
-cffi==1.16.0
+certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-contourpy==1.2.1
-cryptography==42.0.8
+contourpy==1.3.0
+cryptography==43.0.1
 cycler==0.12.1
 daiquiri==3.0.0
 dnspython==2.6.1
 dominate==2.9.1
-email_validator==2.1.1
-exceptiongroup==1.2.0
+email_validator==2.2.0
+exceptiongroup==1.2.2
 Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
-fonttools==4.53.0
+fonttools==4.53.1
 greenlet==3.0.3
-idna==3.7
-importlib_metadata==7.1.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
+idna==3.8
+importlib_metadata==8.4.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-kiwisolver==1.4.5
+kiwisolver==1.4.7
 ldap3==2.9.1
-lxml==5.2.2
+lxml==5.3.0
 MarkupSafe==2.1.5
-matplotlib==3.8.4
+matplotlib==3.9.2
 munkres==1.1.4
-numpy==1.26.4
+numpy==2.1.1
 packaging==24.1
-pastaplus.soh==2023.2.22
+pastaplus.soh==2024.9.5
 pendulum==3.0.0
-pillow==10.3.0
-pip==24.0
+pillow==10.4.0
+pip==24.2
 pluggy==1.5.0
-ply==3.11
 psycopg2==2.9.9
 pyasn1==0.6.0
 pycparser==2.22
 PyNaCl==1.5.0
-pyparsing==3.1.2
-PyQt5==5.15.9
-PyQt5-sip==12.12.2
+pyparsing==3.1.4
+PySide6==6.7.2
 PySocks==1.7.1
-pytest==8.2.2
+pytest==8.3.2
 python-dateutil==2.9.0
 python-json-logger==2.0.7
 requests==2.32.3
-setuptools==70.0.0
-sip==6.7.12
+setuptools==73.0.1
+shiboken6==6.7.2
 six==1.16.0
 sniffer==2020.8.4
 sniffio==1.3.1
 SQLAlchemy==1.4.46
-time-machine==2.14.1
-toml==0.10.2
+time-machine==2.15.0
 tomli==2.0.1
 tornado==6.4.1
-urllib3==2.2.1
+urllib3==2.2.2
 uWSGI==2.0.23
 visitor==0.1.3
-Werkzeug==3.0.3
-wheel==0.43.0
+Werkzeug==3.0.4
+wheel==0.44.0
 WTForms==3.1.2
-zipp==3.19.2
+zipp==3.20.1
+zstandard==0.23.0
