--- a/environment.yml
+++ b/environment.yml
@@ -5,8 +5,8 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - alsa-lib=1.2.12
-  - blinker=1.8.2
+  - alsa-lib=1.2.13
+  - blinker=1.9.0
   - brotli=1.1.0
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
@@ -15,43 +15,44 @@ dependencies:
   - cairo=1.18.0
   - certifi=2024.8.30
   - cffi=1.17.1
-  - charset-normalizer=3.3.2
+  - charset-normalizer=3.4.0
   - click=8.1.7
   - colorama=0.4.6
-  - contourpy=1.3.0
-  - cryptography=43.0.1
+  - contourpy=1.3.1
+  - cryptography=44.0.0
   - cycler=0.12.1
+  - cyrus-sasl=2.1.27
   - daiquiri=3.0.0
   - dbus=1.13.6
-  - dnspython=2.6.1
+  - dnspython=2.7.0
   - dominate=2.9.1
   - double-conversion=3.3.0
   - email-validator=2.2.0
   - email_validator=2.2.0
   - exceptiongroup=1.2.2
-  - expat=2.6.3
-  - flask=3.0.3
+  - expat=2.6.4
+  - flask=3.1.0
   - flask-bootstrap=3.3.7.1
   - flask-login=0.6.3
-  - flask-wtf=1.2.1
+  - flask-wtf=1.2.2
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
   - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
+  - fontconfig=2.15.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.53.1
+  - fonttools=4.55.0
   - freetype=2.12.1
   - graphite2=1.3.13
-  - greenlet=3.0.3
+  - greenlet=3.1.1
   - h2=4.1.0
   - harfbuzz=9.0.0
   - hpack=4.0.0
   - hyperframe=6.0.1
-  - icu=73.2
-  - idna=3.8
-  - importlib-metadata=8.4.0
+  - icu=75.1
+  - idna=3.10
+  - importlib-metadata=8.5.0
   - iniconfig=2.0.0
   - itsdangerous=2.2.0
   - jansson=2.14
@@ -60,7 +61,7 @@ dependencies:
   - kiwisolver=1.4.7
   - krb5=1.21.3
   - lcms2=2.16
-  - ld_impl_linux-64=2.40
+  - ld_impl_linux-64=2.43
   - ldap3=2.9.1
   - lerc=4.0.0
   - libblas=3.9.0
@@ -68,120 +69,128 @@ dependencies:
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcblas=3.9.0
-  - libclang-cpp18.1=18.1.8
-  - libclang13=18.1.8
+  - libclang-cpp19.1=19.1.4
+  - libclang13=19.1.4
   - libcups=2.3.3
-  - libdeflate=1.21
+  - libdeflate=1.22
   - libdrm=2.4.123
   - libedit=3.1.20191231
-  - libexpat=2.6.3
+  - libegl=1.7.0
+  - libexpat=2.6.4
   - libffi=3.4.2
-  - libgcc=14.1.0
-  - libgcc-ng=14.1.0
-  - libgfortran=14.1.0
-  - libgfortran-ng=14.1.0
-  - libgfortran5=14.1.0
-  - libglib=2.80.2
-  - libgomp=14.1.0
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgfortran=14.2.0
+  - libgfortran5=14.2.0
+  - libgl=1.7.0
+  - libglib=2.82.2
+  - libglvnd=1.7.0
+  - libglx=1.7.0
+  - libgomp=14.2.0
   - libiconv=1.17
   - libjpeg-turbo=3.0.0
   - liblapack=3.9.0
-  - libllvm18=18.1.8
+  - libllvm19=19.1.4
   - libnsl=2.0.1
-  - libopenblas=0.3.27
+  - libntlm=1.4
+  - libopenblas=0.3.28
+  - libopengl=1.7.0
   - libpciaccess=0.18
-  - libpng=1.6.43
-  - libpq=16.4
-  - libsodium=1.0.18
-  - libsqlite=3.46.1
-  - libstdcxx=14.1.0
-  - libstdcxx-ng=14.1.0
-  - libtiff=4.6.0
+  - libpng=1.6.44
+  - libpq=17.2
+  - libsodium=1.0.20
+  - libsqlite=3.47.0
+  - libstdcxx=14.2.0
+  - libstdcxx-ng=14.2.0
+  - libtiff=4.7.0
   - libuuid=2.38.1
   - libwebp-base=1.4.0
-  - libxcb=1.16
+  - libxcb=1.17.0
   - libxcrypt=4.4.36
   - libxkbcommon=1.7.0
-  - libxml2=2.12.7
+  - libxml2=2.13.5
   - libxslt=1.1.39
   - libzlib=1.3.1
   - lxml=5.3.0
-  - markupsafe=2.1.5
+  - markupsafe=3.0.2
   - matplotlib=3.9.2
   - matplotlib-base=3.9.2
   - munkres=1.1.4
-  - mysql-common=8.3.0
-  - mysql-libs=8.3.0
+  - mysql-common=9.0.1
+  - mysql-libs=9.0.1
   - ncurses=6.5
-  - numpy=2.1.1
+  - numpy=2.1.3
   - openjpeg=2.5.2
-  - openssl=3.3.2
-  - packaging=24.1
-  - pcre=8.45
-  - pcre2=10.43
+  - openldap=2.6.9
+  - openssl=3.4.0
+  - packaging=24.2
+  - pcre2=10.44
   - pendulum=3.0.0
-  - pillow=10.4.0
-  - pip=24.2
+  - pillow=11.0.0
+  - pip=24.3.1
   - pixman=0.43.2
   - pluggy=1.5.0
   - psycopg2=2.9.9
   - pthread-stubs=0.4
-  - pyasn1=0.6.0
+  - pyasn1=0.6.1
   - pycparser=2.22
   - pynacl=1.5.0
-  - pyparsing=3.1.4
-  - pyside6=6.7.2
+  - pyparsing=3.2.0
+  - pyside6=6.8.0.2
   - pysocks=1.7.1
-  - pytest=8.3.2
-  - python=3.11.9
-  - python-dateutil=2.9.0
+  - pytest=8.3.3
+  - python=3.11.10
+  - python-dateutil=2.9.0.post0
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qhull=2020.2
-  - qt6-main=6.7.2
+  - qt6-main=6.8.0
   - readline=8.2
   - requests=2.32.3
-  - setuptools=73.0.1
+  - setuptools=75.6.0
   - six=1.16.0
   - sniffio=1.3.1
   - sqlalchemy=1.4.46
-  - time-machine=2.15.0
+  - time-machine=2.16.0
   - tk=8.6.13
-  - tomli=2.0.1
-  - tornado=6.4.1
-  - tzdata=2024a
-  - urllib3=2.2.2
-  - uwsgi=2.0.23
+  - tomli=2.1.0
+  - tornado=6.4.2
+  - tzdata=2024b
+  - unicodedata2=15.1.0
+  - urllib3=2.2.3
+  - uwsgi=2.0.28
   - visitor=0.1.3
   - wayland=1.23.1
-  - werkzeug=3.0.4
-  - wheel=0.44.0
-  - wtforms=3.1.2
+  - werkzeug=3.1.3
+  - wheel=0.45.1
+  - wtforms=3.2.1
   - xcb-util=0.4.1
-  - xcb-util-cursor=0.1.4
+  - xcb-util-cursor=0.1.5
   - xcb-util-image=0.4.0
   - xcb-util-keysyms=0.4.1
   - xcb-util-renderutil=0.3.10
   - xcb-util-wm=0.4.2
-  - xkeyboard-config=2.42
-  - xorg-kbproto=1.0.7
+  - xkeyboard-config=2.43
   - xorg-libice=1.1.1
   - xorg-libsm=1.2.4
-  - xorg-libx11=1.8.9
+  - xorg-libx11=1.8.10
   - xorg-libxau=1.0.11
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
+  - xorg-libxcomposite=0.4.6
+  - xorg-libxcursor=1.2.3
+  - xorg-libxdamage=1.1.6
+  - xorg-libxdmcp=1.1.5
+  - xorg-libxext=1.3.6
+  - xorg-libxfixes=6.0.1
+  - xorg-libxi=1.8.2
+  - xorg-libxrandr=1.5.4
   - xorg-libxrender=0.9.11
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xproto=7.0.31
+  - xorg-libxtst=1.2.5
+  - xorg-libxxf86vm=1.1.5
+  - xorg-xorgproto=2024.1
   - xz=5.2.6
   - yaml=0.2.5
-  - zipp=3.20.1
+  - zipp=3.21.0
   - zlib=1.3.1
   - zstandard=0.23.0
   - zstd=1.5.6
-  - pip:
-      - pastaplus-soh==2024.9.5
-      - sniffer==2020.8.4
 prefix: /home/servilla/miniconda3/envs/dashboard
