--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,69 @@
-blinker==1.8.2
+blinker==1.9.0
 Brotli==1.1.0
 certifi==2024.8.30
 cffi==1.17.1
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
-contourpy==1.3.0
-cryptography==43.0.1
+contourpy==1.3.1
+cryptography==44.0.0
 cycler==0.12.1
 daiquiri==3.0.0
-dnspython==2.6.1
+dnspython==2.7.0
 dominate==2.9.1
 email_validator==2.2.0
 exceptiongroup==1.2.2
-Flask==3.0.3
+Flask==3.1.0
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
-Flask-WTF==1.2.1
-fonttools==4.53.1
-greenlet==3.0.3
+Flask-WTF==1.2.2
+fonttools==4.55.0
+greenlet==3.1.1
 h2==4.1.0
 hpack==4.0.0
 hyperframe==6.0.1
-idna==3.8
-importlib_metadata==8.4.0
+idna==3.10
+importlib_metadata==8.5.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 kiwisolver==1.4.7
 ldap3==2.9.1
 lxml==5.3.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
 matplotlib==3.9.2
 munkres==1.1.4
-numpy==2.1.1
-packaging==24.1
-pastaplus.soh==2024.9.5
+numpy==2.1.3
+packaging==24.2
 pendulum==3.0.0
-pillow==10.4.0
-pip==24.2
+pillow==11.0.0
+pip==24.3.1
 pluggy==1.5.0
 psycopg2==2.9.9
-pyasn1==0.6.0
+pyasn1==0.6.1
 pycparser==2.22
 PyNaCl==1.5.0
-pyparsing==3.1.4
-PySide6==6.7.2
+pyparsing==3.2.0
+PySide6==6.8.0.2
 PySocks==1.7.1
-pytest==8.3.2
-python-dateutil==2.9.0
+pytest==8.3.3
+python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 requests==2.32.3
-setuptools==73.0.1
-shiboken6==6.7.2
+setuptools==75.6.0
+shiboken6==6.8.0.2
 six==1.16.0
-sniffer==2020.8.4
 sniffio==1.3.1
 SQLAlchemy==1.4.46
-time-machine==2.15.0
-tomli==2.0.1
-tornado==6.4.1
-urllib3==2.2.2
-uWSGI==2.0.23
+time-machine==2.16.0
+tomli==2.1.0
+tornado==6.4.2
+unicodedata2==15.1.0
+urllib3==2.2.3
+uWSGI==2.0.28
 visitor==0.1.3
-Werkzeug==3.0.4
-wheel==0.44.0
-WTForms==3.1.2
-zipp==3.20.1
+Werkzeug==3.1.3
+wheel==0.45.1
+WTForms==3.2.1
+zipp==3.21.0
 zstandard==0.23.0
