--- a/webapp/config.py.template
+++ b/webapp/config.py.template
@@ -28,6 +28,7 @@ class Config(object):
     STATIC = 'STATIC IMAGE DIRECTORY PATH'
     TMP_DIR = 'TEMPORARY DIRECTORY PATH'
     CACHE = 'PERMANENT CACHE DIRECTORY PATH'
+    REFERER = "REFERER"
 
     # LDAP configuration
     LDAP = 'ldap.edirepository.org'
