--- a/environment.yml
+++ b/environment.yml
@@ -11,15 +11,15 @@ dependencies:
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2024.8.30
-  - cairo=1.18.0
-  - certifi=2024.8.30
+  - ca-certificates=2025.1.31
+  - cairo=1.18.2
+  - certifi=2024.12.14
   - cffi=1.17.1
-  - charset-normalizer=3.4.0
-  - click=8.1.7
+  - charset-normalizer=3.4.1
+  - click=8.1.8
   - colorama=0.4.6
   - contourpy=1.3.1
-  - cryptography=44.0.0
+  - cryptography=44.0.1
   - cycler=0.12.1
   - cyrus-sasl=2.1.27
   - daiquiri=3.0.0
@@ -42,25 +42,25 @@ dependencies:
   - fontconfig=2.15.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.55.0
+  - fonttools=4.56.0
   - freetype=2.12.1
   - graphite2=1.3.13
   - greenlet=3.1.1
-  - h2=4.1.0
-  - harfbuzz=9.0.0
-  - hpack=4.0.0
-  - hyperframe=6.0.1
+  - h2=4.2.0
+  - harfbuzz=10.2.0
+  - hpack=4.1.0
+  - hyperframe=6.1.0
   - icu=75.1
   - idna=3.10
-  - importlib-metadata=8.5.0
+  - importlib-metadata=8.6.1
   - iniconfig=2.0.0
   - itsdangerous=2.2.0
   - jansson=2.14
-  - jinja2=3.1.4
+  - jinja2=3.1.5
   - keyutils=1.6.1
   - kiwisolver=1.4.7
   - krb5=1.21.3
-  - lcms2=2.16
+  - lcms2=2.17
   - ld_impl_linux-64=2.43
   - ldap3=2.9.1
   - lerc=4.0.0
@@ -69,15 +69,15 @@ dependencies:
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcblas=3.9.0
-  - libclang-cpp19.1=19.1.4
-  - libclang13=19.1.4
+  - libclang-cpp19.1=19.1.7
+  - libclang13=19.1.7
   - libcups=2.3.3
-  - libdeflate=1.22
-  - libdrm=2.4.123
-  - libedit=3.1.20191231
+  - libdeflate=1.23
+  - libdrm=2.4.124
+  - libedit=3.1.20250104
   - libegl=1.7.0
   - libexpat=2.6.4
-  - libffi=3.4.2
+  - libffi=3.4.6
   - libgcc=14.2.0
   - libgcc-ng=14.2.0
   - libgfortran=14.2.0
@@ -90,74 +90,75 @@ dependencies:
   - libiconv=1.17
   - libjpeg-turbo=3.0.0
   - liblapack=3.9.0
-  - libllvm19=19.1.4
+  - libllvm19=19.1.7
+  - liblzma=5.6.4
   - libnsl=2.0.1
-  - libntlm=1.4
+  - libntlm=1.8
   - libopenblas=0.3.28
   - libopengl=1.7.0
   - libpciaccess=0.18
-  - libpng=1.6.44
+  - libpng=1.6.46
   - libpq=17.2
   - libsodium=1.0.20
-  - libsqlite=3.47.0
+  - libsqlite=3.48.0
   - libstdcxx=14.2.0
   - libstdcxx-ng=14.2.0
   - libtiff=4.7.0
   - libuuid=2.38.1
-  - libwebp-base=1.4.0
+  - libwebp-base=1.5.0
   - libxcb=1.17.0
   - libxcrypt=4.4.36
-  - libxkbcommon=1.7.0
+  - libxkbcommon=1.8.0
   - libxml2=2.13.5
   - libxslt=1.1.39
   - libzlib=1.3.1
-  - lxml=5.3.0
+  - lxml=5.3.1
   - markupsafe=3.0.2
-  - matplotlib=3.9.2
-  - matplotlib-base=3.9.2
+  - matplotlib=3.10.0
+  - matplotlib-base=3.10.0
   - munkres=1.1.4
   - mysql-common=9.0.1
   - mysql-libs=9.0.1
   - ncurses=6.5
-  - numpy=2.1.3
-  - openjpeg=2.5.2
+  - numpy=2.2.3
+  - openjpeg=2.5.3
   - openldap=2.6.9
-  - openssl=3.4.0
+  - openssl=3.4.1
   - packaging=24.2
   - pcre2=10.44
   - pendulum=3.0.0
-  - pillow=11.0.0
-  - pip=24.3.1
-  - pixman=0.43.2
+  - pillow=11.1.0
+  - pip=25.0.1
+  - pixman=0.44.2
   - pluggy=1.5.0
   - psycopg2=2.9.9
   - pthread-stubs=0.4
   - pyasn1=0.6.1
   - pycparser=2.22
   - pynacl=1.5.0
-  - pyparsing=3.2.0
-  - pyside6=6.8.0.2
+  - pyparsing=3.2.1
+  - pyside6=6.8.2
   - pysocks=1.7.1
-  - pytest=8.3.3
-  - python=3.11.10
+  - pytest=8.3.4
+  - python=3.11.11
   - python-dateutil=2.9.0.post0
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qhull=2020.2
-  - qt6-main=6.8.0
+  - qt6-main=6.8.2
   - readline=8.2
   - requests=2.32.3
-  - setuptools=75.6.0
-  - six=1.16.0
+  - setuptools=75.8.0
+  - six=1.17.0
   - sniffio=1.3.1
   - sqlalchemy=1.4.46
   - time-machine=2.16.0
   - tk=8.6.13
-  - tomli=2.1.0
+  - tomli=2.2.1
   - tornado=6.4.2
-  - tzdata=2024b
-  - unicodedata2=15.1.0
-  - urllib3=2.2.3
+  - tzdata=2025a
+  - unicodedata2=16.0.0
+  - urllib3=2.3.0
   - uwsgi=2.0.28
   - visitor=0.1.3
   - wayland=1.23.1
@@ -171,10 +172,10 @@ dependencies:
   - xcb-util-renderutil=0.3.10
   - xcb-util-wm=0.4.2
   - xkeyboard-config=2.43
-  - xorg-libice=1.1.1
-  - xorg-libsm=1.2.4
-  - xorg-libx11=1.8.10
-  - xorg-libxau=1.0.11
+  - xorg-libice=1.1.2
+  - xorg-libsm=1.2.5
+  - xorg-libx11=1.8.11
+  - xorg-libxau=1.0.12
   - xorg-libxcomposite=0.4.6
   - xorg-libxcursor=1.2.3
   - xorg-libxdamage=1.1.6
@@ -183,14 +184,11 @@ dependencies:
   - xorg-libxfixes=6.0.1
   - xorg-libxi=1.8.2
   - xorg-libxrandr=1.5.4
-  - xorg-libxrender=0.9.11
+  - xorg-libxrender=0.9.12
   - xorg-libxtst=1.2.5
-  - xorg-libxxf86vm=1.1.5
-  - xorg-xorgproto=2024.1
-  - xz=5.2.6
+  - xorg-libxxf86vm=1.1.6
   - yaml=0.2.5
   - zipp=3.21.0
-  - zlib=1.3.1
   - zstandard=0.23.0
   - zstd=1.5.6
 prefix: /home/servilla/miniconda3/envs/dashboard
