--- a/environment.yml
+++ b/environment.yml
@@ -5,33 +5,32 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - alsa-lib=1.2.13
+  - alsa-lib=1.2.14
   - blinker=1.9.0
   - brotli=1.1.0
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2025.1.31
+  - ca-certificates=2025.4.26
   - cairo=1.18.4
-  - certifi=2025.1.31
+  - certifi=2025.4.26
   - cffi=1.17.1
-  - charset-normalizer=3.4.1
-  - click=8.1.8
+  - charset-normalizer=3.4.2
+  - click=8.2.1
   - colorama=0.4.6
-  - contourpy=1.3.1
-  - cryptography=44.0.2
+  - contourpy=1.3.2
+  - cryptography=45.0.2
   - cycler=0.12.1
   - cyrus-sasl=2.1.27
   - daiquiri=3.0.0
-  - dbus=1.13.6
+  - dbus=1.16.2
   - dnspython=2.7.0
   - dominate=2.9.1
   - double-conversion=3.3.1
   - email-validator=2.2.0
   - email_validator=2.2.0
-  - exceptiongroup=1.2.2
-  - expat=2.6.4
-  - flask=3.1.0
+  - exceptiongroup=1.3.0
+  - flask=3.1.1
   - flask-bootstrap=3.3.7.1
   - flask-login=0.6.3
   - flask-wtf=1.2.2
@@ -42,12 +41,12 @@ dependencies:
   - fontconfig=2.15.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.56.0
-  - freetype=2.12.1
+  - fonttools=4.58.0
+  - freetype=2.13.3
   - graphite2=1.3.13
-  - greenlet=3.1.1
+  - greenlet=3.2.2
   - h2=4.2.0
-  - harfbuzz=10.4.0
+  - harfbuzz=11.2.1
   - hpack=4.1.0
   - hyperframe=6.1.0
   - icu=75.1
@@ -55,7 +54,7 @@ dependencies:
   - importlib-metadata=8.6.1
   - iniconfig=2.0.0
   - itsdangerous=2.2.0
-  - jansson=2.14
+  - jansson=2.14.1
   - jinja2=3.1.6
   - keyutils=1.6.1
   - kiwisolver=1.4.7
@@ -69,97 +68,98 @@ dependencies:
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcblas=3.9.0
-  - libclang-cpp19.1=19.1.7
-  - libclang13=19.1.7
+  - libclang-cpp20.1=20.1.5
+  - libclang13=20.1.5
   - libcups=2.3.3
-  - libdeflate=1.23
+  - libdeflate=1.24
   - libdrm=2.4.124
   - libedit=3.1.20250104
   - libegl=1.7.0
-  - libexpat=2.6.4
+  - libexpat=2.7.0
   - libffi=3.4.6
-  - libgcc=14.2.0
-  - libgcc-ng=14.2.0
-  - libgfortran=14.2.0
-  - libgfortran5=14.2.0
+  - libfreetype=2.13.3
+  - libfreetype6=2.13.3
+  - libgcc=15.1.0
+  - libgcc-ng=15.1.0
+  - libgfortran=15.1.0
+  - libgfortran5=15.1.0
   - libgl=1.7.0
-  - libglib=2.82.2
+  - libglib=2.84.2
   - libglvnd=1.7.0
   - libglx=1.7.0
-  - libgomp=14.2.0
+  - libgomp=15.1.0
   - libiconv=1.18
-  - libjpeg-turbo=3.0.0
+  - libjpeg-turbo=3.1.0
   - liblapack=3.9.0
-  - libllvm19=19.1.7
-  - liblzma=5.6.4
+  - libllvm20=20.1.5
+  - liblzma=5.8.1
   - libnsl=2.0.1
   - libntlm=1.8
   - libopenblas=0.3.29
   - libopengl=1.7.0
   - libpciaccess=0.18
   - libpng=1.6.47
-  - libpq=17.4
+  - libpq=17.5
   - libsodium=1.0.20
-  - libsqlite=3.49.1
-  - libstdcxx=14.2.0
-  - libstdcxx-ng=14.2.0
+  - libsqlite=3.49.2
+  - libstdcxx=15.1.0
+  - libstdcxx-ng=15.1.0
   - libtiff=4.7.0
   - libuuid=2.38.1
   - libwebp-base=1.5.0
   - libxcb=1.17.0
   - libxcrypt=4.4.36
-  - libxkbcommon=1.8.1
-  - libxml2=2.13.6
+  - libxkbcommon=1.9.2
+  - libxml2=2.13.8
   - libxslt=1.1.39
   - libzlib=1.3.1
-  - lxml=5.3.1
+  - lxml=5.4.0
   - markupsafe=3.0.2
-  - matplotlib=3.10.1
-  - matplotlib-base=3.10.1
+  - matplotlib=3.10.3
+  - matplotlib-base=3.10.3
   - munkres=1.1.4
-  - mysql-common=9.0.1
-  - mysql-libs=9.0.1
   - ncurses=6.5
-  - numpy=2.2.3
+  - numpy=2.2.6
   - openjpeg=2.5.3
   - openldap=2.6.9
-  - openssl=3.4.1
-  - packaging=24.2
-  - pcre2=10.44
-  - pendulum=3.0.0
-  - pillow=11.1.0
-  - pip=25.0.1
-  - pixman=0.44.2
-  - pluggy=1.5.0
-  - psycopg2=2.9.9
+  - openssl=3.5.0
+  - packaging=25.0
+  - pcre2=10.45
+  - pendulum=3.1.0
+  - pillow=11.2.1
+  - pip=25.1.1
+  - pixman=0.46.0
+  - pluggy=1.6.0
+  - psycopg2=2.9.10
   - pthread-stubs=0.4
   - pyasn1=0.6.1
   - pycparser=2.22
   - pynacl=1.5.0
-  - pyparsing=3.2.1
-  - pyside6=6.8.2
+  - pyparsing=3.2.3
+  - pyside6=6.9.0
   - pysocks=1.7.1
   - pytest=8.3.5
-  - python=3.11.11
+  - python=3.11.12
   - python-dateutil=2.9.0.post0
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qhull=2020.2
-  - qt6-main=6.8.2
+  - qt6-main=6.9.0
   - readline=8.2
   - requests=2.32.3
-  - setuptools=75.8.2
+  - setuptools=80.8.0
   - six=1.17.0
   - sniffio=1.3.1
   - sqlalchemy=1.4.46
   - time-machine=2.16.0
   - tk=8.6.13
   - tomli=2.2.1
-  - tornado=6.4.2
-  - tzdata=2025a
+  - tornado=6.5
+  - typing_extensions=4.13.2
+  - tzdata=2025b
   - unicodedata2=16.0.0
-  - urllib3=2.3.0
-  - uwsgi=2.0.28
+  - urllib3=2.4.0
+  - uwsgi=2.0.29
   - visitor=0.1.3
   - wayland=1.23.1
   - werkzeug=3.1.3
@@ -171,10 +171,10 @@ dependencies:
   - xcb-util-keysyms=0.4.1
   - xcb-util-renderutil=0.3.10
   - xcb-util-wm=0.4.2
-  - xkeyboard-config=2.43
+  - xkeyboard-config=2.44
   - xorg-libice=1.1.2
-  - xorg-libsm=1.2.5
-  - xorg-libx11=1.8.11
+  - xorg-libsm=1.2.6
+  - xorg-libx11=1.8.12
   - xorg-libxau=1.0.12
   - xorg-libxcomposite=0.4.6
   - xorg-libxcursor=1.2.3
@@ -190,5 +190,5 @@ dependencies:
   - yaml=0.2.5
   - zipp=3.21.0
   - zstandard=0.23.0
-  - zstd=1.5.6
+  - zstd=1.5.7
 prefix: /home/servilla/miniconda3/envs/dashboard
