--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 blinker==1.9.0
 Brotli==1.1.0
-certifi==2025.1.31
+certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
+charset-normalizer==3.4.2
+click==8.2.1
 colorama==0.4.6
-contourpy==1.3.1
-cryptography==44.0.2
+contourpy==1.3.2
+cryptography==45.0.2
 cycler==0.12.1
 daiquiri==3.0.0
 dnspython==2.7.0
 dominate==2.9.1
 email_validator==2.2.0
-exceptiongroup==1.2.2
-Flask==3.1.0
+exceptiongroup==1.3.0
+Flask==3.1.1
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.2
-fonttools==4.56.0
-greenlet==3.1.1
+fonttools==4.58.0
+greenlet==3.2.2
 h2==4.2.0
 hpack==4.1.0
 hyperframe==6.1.0
@@ -29,38 +29,39 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 kiwisolver==1.4.7
 ldap3==2.9.1
-lxml==5.3.1
+lxml==5.4.0
 MarkupSafe==3.0.2
-matplotlib==3.10.1
+matplotlib==3.10.3
 munkres==1.1.4
-numpy==2.2.3
-packaging==24.2
-pendulum==3.0.0
-pillow==11.1.0
-pip==25.0.1
-pluggy==1.5.0
-psycopg2==2.9.9
+numpy==2.2.6
+packaging==25.0
+pendulum==3.1.0
+pillow==11.2.1
+pip==25.1.1
+pluggy==1.6.0
+psycopg2==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 PyNaCl==1.5.0
-pyparsing==3.2.1
-PySide6==6.8.2
+pyparsing==3.2.3
+PySide6==6.9.0
 PySocks==1.7.1
 pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 requests==2.32.3
-setuptools==75.8.2
-shiboken6==6.8.2
+setuptools==80.8.0
+shiboken6==6.9.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==1.4.46
 time-machine==2.16.0
 tomli==2.2.1
-tornado==6.4.2
+tornado==6.5
+typing_extensions==4.13.2
 unicodedata2==16.0.0
-urllib3==2.3.0
-uWSGI==2.0.28
+urllib3==2.4.0
+uWSGI==2.0.29
 visitor==0.1.3
 Werkzeug==3.1.3
 wheel==0.45.1
