--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
   - click=8.2.1
   - colorama=0.4.6
   - contourpy=1.3.2
-  - cryptography=45.0.2
+  - cryptography=45.0.4
   - cycler=0.12.1
   - cyrus-sasl=2.1.27
   - daiquiri=3.0.0
@@ -41,17 +41,17 @@ dependencies:
   - fontconfig=2.15.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.58.0
+  - fonttools=4.58.2
   - freetype=2.13.3
   - graphite2=1.3.13
-  - greenlet=3.2.2
+  - greenlet=3.2.3
   - h2=4.2.0
   - harfbuzz=11.2.1
   - hpack=4.1.0
   - hyperframe=6.1.0
   - icu=75.1
   - idna=3.10
-  - importlib-metadata=8.6.1
+  - importlib-metadata=8.7.0
   - iniconfig=2.0.0
   - itsdangerous=2.2.0
   - jansson=2.14.1
@@ -68,8 +68,8 @@ dependencies:
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcblas=3.9.0
-  - libclang-cpp20.1=20.1.5
-  - libclang13=20.1.5
+  - libclang-cpp20.1=20.1.6
+  - libclang13=20.1.6
   - libcups=2.3.3
   - libdeflate=1.24
   - libdrm=2.4.124
@@ -91,7 +91,7 @@ dependencies:
   - libiconv=1.18
   - libjpeg-turbo=3.1.0
   - liblapack=3.9.0
-  - libllvm20=20.1.5
+  - libllvm20=20.1.6
   - liblzma=5.8.1
   - libnsl=2.0.1
   - libntlm=1.8
@@ -101,7 +101,7 @@ dependencies:
   - libpng=1.6.47
   - libpq=17.5
   - libsodium=1.0.20
-  - libsqlite=3.49.2
+  - libsqlite=3.50.1
   - libstdcxx=15.1.0
   - libstdcxx-ng=15.1.0
   - libtiff=4.7.0
@@ -109,7 +109,7 @@ dependencies:
   - libwebp-base=1.5.0
   - libxcb=1.17.0
   - libxcrypt=4.4.36
-  - libxkbcommon=1.9.2
+  - libxkbcommon=1.10.0
   - libxml2=2.13.8
   - libxslt=1.1.39
   - libzlib=1.3.1
@@ -119,47 +119,48 @@ dependencies:
   - matplotlib-base=3.10.3
   - munkres=1.1.4
   - ncurses=6.5
-  - numpy=2.2.6
+  - numpy=2.3.0
   - openjpeg=2.5.3
-  - openldap=2.6.9
+  - openldap=2.6.10
   - openssl=3.5.0
   - packaging=25.0
   - pcre2=10.45
   - pendulum=3.1.0
   - pillow=11.2.1
   - pip=25.1.1
-  - pixman=0.46.0
+  - pixman=0.46.2
   - pluggy=1.6.0
   - psycopg2=2.9.10
   - pthread-stubs=0.4
   - pyasn1=0.6.1
   - pycparser=2.22
+  - pygments=2.19.1
   - pynacl=1.5.0
   - pyparsing=3.2.3
-  - pyside6=6.9.0
+  - pyside6=6.9.1
   - pysocks=1.7.1
-  - pytest=8.3.5
-  - python=3.11.12
+  - pytest=8.4.0
+  - python=3.11.13
   - python-dateutil=2.9.0.post0
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qhull=2020.2
-  - qt6-main=6.9.0
+  - qt6-main=6.9.1
   - readline=8.2
-  - requests=2.32.3
-  - setuptools=80.8.0
+  - requests=2.32.4
+  - setuptools=80.9.0
   - six=1.17.0
   - sniffio=1.3.1
   - sqlalchemy=1.4.46
   - time-machine=2.16.0
   - tk=8.6.13
   - tomli=2.2.1
-  - tornado=6.5
-  - typing_extensions=4.13.2
+  - tornado=6.5.1
+  - typing_extensions=4.14.0
   - tzdata=2025b
   - unicodedata2=16.0.0
   - urllib3=2.4.0
-  - uwsgi=2.0.29
+  - uwsgi=2.0.30
   - visitor=0.1.3
   - wayland=1.23.1
   - werkzeug=3.1.3
@@ -171,7 +172,7 @@ dependencies:
   - xcb-util-keysyms=0.4.1
   - xcb-util-renderutil=0.3.10
   - xcb-util-wm=0.4.2
-  - xkeyboard-config=2.44
+  - xkeyboard-config=2.45
   - xorg-libice=1.1.2
   - xorg-libsm=1.2.6
   - xorg-libx11=1.8.12
@@ -188,7 +189,7 @@ dependencies:
   - xorg-libxtst=1.2.5
   - xorg-libxxf86vm=1.1.6
   - yaml=0.2.5
-  - zipp=3.21.0
+  - zipp=3.23.0
   - zstandard=0.23.0
   - zstd=1.5.7
 prefix: /home/servilla/miniconda3/envs/dashboard
