--- a/environment.yml
+++ b/environment.yml
@@ -7,24 +7,24 @@ dependencies:
   - _openmp_mutex=4.5
   - alsa-lib=1.2.14
   - blinker=1.9.0
-  - brotli=1.1.0
-  - brotli-bin=1.1.0
-  - brotli-python=1.1.0
+  - brotli=1.2.0
+  - brotli-bin=1.2.0
+  - brotli-python=1.2.0
   - bzip2=1.0.8
-  - ca-certificates=2025.8.3
+  - ca-certificates=2025.10.5
   - cairo=1.18.4
-  - certifi=2025.8.3
-  - cffi=1.17.1
-  - charset-normalizer=3.4.3
-  - click=8.2.1
+  - certifi=2025.10.5
+  - cffi=2.0.0
+  - charset-normalizer=3.4.4
+  - click=8.3.0
   - colorama=0.4.6
   - contourpy=1.3.3
-  - cryptography=45.0.7
+  - cryptography=46.0.3
   - cycler=0.12.1
   - cyrus-sasl=2.1.28
   - daiquiri=3.0.0
   - dbus=1.16.2
-  - dnspython=2.7.0
+  - dnspython=2.8.0
   - dominate=2.9.1
   - double-conversion=3.3.1
   - email-validator=2.3.0
@@ -41,18 +41,18 @@ dependencies:
   - fontconfig=2.15.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.59.2
-  - freetype=2.13.3
+  - fonttools=4.60.1
+  - freetype=2.14.1
   - graphite2=1.3.14
   - greenlet=3.2.4
   - h2=4.3.0
-  - harfbuzz=11.4.5
+  - harfbuzz=12.1.0
   - hpack=4.1.0
   - hyperframe=6.1.0
   - icu=75.1
-  - idna=3.10
+  - idna=3.11
   - importlib-metadata=8.7.0
-  - iniconfig=2.0.0
+  - iniconfig=2.3.0
   - itsdangerous=2.2.0
   - jansson=2.14.1
   - jinja2=3.1.6
@@ -64,35 +64,34 @@ dependencies:
   - ldap3=2.9.1
   - lerc=4.0.0
   - libblas=3.9.0
-  - libbrotlicommon=1.1.0
-  - libbrotlidec=1.1.0
-  - libbrotlienc=1.1.0
+  - libbrotlicommon=1.2.0
+  - libbrotlidec=1.2.0
+  - libbrotlienc=1.2.0
   - libcblas=3.9.0
-  - libclang-cpp20.1=20.1.8
-  - libclang13=21.1.0
+  - libclang-cpp21.1=21.1.4
+  - libclang13=21.1.4
   - libcups=2.3.3
-  - libdeflate=1.24
+  - libdeflate=1.25
   - libdrm=2.4.125
   - libedit=3.1.20250104
   - libegl=1.7.0
   - libexpat=2.7.1
-  - libffi=3.4.6
-  - libfreetype=2.13.3
-  - libfreetype6=2.13.3
-  - libgcc=15.1.0
-  - libgcc-ng=15.1.0
-  - libgfortran=15.1.0
-  - libgfortran5=15.1.0
+  - libffi=3.5.2
+  - libfreetype=2.14.1
+  - libfreetype6=2.14.1
+  - libgcc=15.2.0
+  - libgcc-ng=15.2.0
+  - libgfortran=15.2.0
+  - libgfortran5=15.2.0
   - libgl=1.7.0
-  - libglib=2.84.3
+  - libglib=2.86.1
   - libglvnd=1.7.0
   - libglx=1.7.0
-  - libgomp=15.1.0
+  - libgomp=15.2.0
   - libiconv=1.18
-  - libjpeg-turbo=3.1.0
+  - libjpeg-turbo=3.1.2
   - liblapack=3.9.0
-  - libllvm20=20.1.8
-  - libllvm21=21.1.0
+  - libllvm21=21.1.4
   - liblzma=5.8.1
   - libnsl=2.0.1
   - libntlm=1.8
@@ -100,34 +99,36 @@ dependencies:
   - libopengl=1.7.0
   - libpciaccess=0.18
   - libpng=1.6.50
-  - libpq=17.6
+  - libpq=18.0
   - libsodium=1.0.20
   - libsqlite=3.50.4
-  - libstdcxx=15.1.0
-  - libstdcxx-ng=15.1.0
-  - libtiff=4.7.0
-  - libuuid=2.38.1
+  - libstdcxx=15.2.0
+  - libstdcxx-ng=15.2.0
+  - libtiff=4.7.1
+  - libuuid=2.41.2
+  - libvulkan-loader=1.4.328.1
   - libwebp-base=1.6.0
   - libxcb=1.17.0
   - libxcrypt=4.4.36
-  - libxkbcommon=1.11.0
-  - libxml2=2.13.8
+  - libxkbcommon=1.12.3
+  - libxml2=2.15.1
+  - libxml2-16=2.15.1
   - libxslt=1.1.43
   - libzlib=1.3.1
-  - lxml=6.0.1
-  - markupsafe=3.0.2
-  - matplotlib=3.10.6
-  - matplotlib-base=3.10.6
+  - lxml=6.0.2
+  - markupsafe=3.0.3
+  - matplotlib=3.10.7
+  - matplotlib-base=3.10.7
   - munkres=1.1.4
   - ncurses=6.5
-  - numpy=2.3.2
-  - openjpeg=2.5.3
+  - numpy=2.3.4
+  - openjpeg=2.5.4
   - openldap=2.6.10
-  - openssl=3.5.2
+  - openssl=3.5.4
   - packaging=25.0
-  - pcre2=10.45
+  - pcre2=10.46
   - pendulum=3.1.0
-  - pillow=11.3.0
+  - pillow=12.0.0
   - pip=25.2
   - pixman=0.46.4
   - pluggy=1.6.0
@@ -136,17 +137,17 @@ dependencies:
   - pyasn1=0.6.1
   - pycparser=2.22
   - pygments=2.19.2
-  - pynacl=1.5.0
-  - pyparsing=3.2.3
-  - pyside6=6.9.2
+  - pynacl=1.6.0
+  - pyparsing=3.2.5
+  - pyside6=6.9.3
   - pysocks=1.7.1
-  - pytest=8.4.1
-  - python=3.11.13
+  - pytest=8.4.2
+  - python=3.11.14
   - python-dateutil=2.9.0.post0
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qhull=2020.2
-  - qt6-main=6.9.2
+  - qt6-main=6.9.3
   - readline=8.2
   - requests=2.32.5
   - setuptools=80.9.0
@@ -155,13 +156,13 @@ dependencies:
   - sqlalchemy=1.4.46
   - time-machine=2.19.0
   - tk=8.6.13
-  - tomli=2.2.1
+  - tomli=2.3.0
   - tornado=6.5.2
   - typing_extensions=4.15.0
   - tzdata=2025b
   - unicodedata2=16.0.0
   - urllib3=2.5.0
-  - uwsgi=2.0.30
+  - uwsgi=2.0.31
   - visitor=0.1.3
   - wayland=1.24.0
   - werkzeug=3.1.3
@@ -173,7 +174,7 @@ dependencies:
   - xcb-util-keysyms=0.4.1
   - xcb-util-renderutil=0.3.10
   - xcb-util-wm=0.4.2
-  - xkeyboard-config=2.45
+  - xkeyboard-config=2.46
   - xorg-libice=1.1.2
   - xorg-libsm=1.2.6
   - xorg-libx11=1.8.12
@@ -183,7 +184,7 @@ dependencies:
   - xorg-libxdamage=1.1.6
   - xorg-libxdmcp=1.1.5
   - xorg-libxext=1.3.6
-  - xorg-libxfixes=6.0.1
+  - xorg-libxfixes=6.0.2
   - xorg-libxi=1.8.2
   - xorg-libxrandr=1.5.4
   - xorg-libxrender=0.9.12
@@ -191,6 +192,7 @@ dependencies:
   - xorg-libxxf86vm=1.1.6
   - yaml=0.2.5
   - zipp=3.23.0
-  - zstandard=0.24.0
+  - zlib-ng=2.2.5
+  - zstandard=0.25.0
   - zstd=1.5.7
 prefix: /home/servilla/miniconda3/envs/dashboard
