--- a/environment.yml
+++ b/environment.yml
@@ -5,16 +5,16 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - alsa-lib=1.2.14
-  - backports.zstd=1.2.0
+  - alsa-lib=1.2.15.3
+  - backports.zstd=1.3.0
   - blinker=1.9.0
   - brotli=1.2.0
   - brotli-bin=1.2.0
   - brotli-python=1.2.0
   - bzip2=1.0.8
-  - ca-certificates=2025.11.12
+  - ca-certificates=2026.1.4
   - cairo=1.18.4
-  - certifi=2025.11.12
+  - certifi=2026.1.4
   - cffi=2.0.0
   - charset-normalizer=3.4.4
   - click=8.3.1
@@ -27,7 +27,7 @@ dependencies:
   - dbus=1.16.2
   - dnspython=2.8.0
   - dominate=2.9.1
-  - double-conversion=3.3.1
+  - double-conversion=3.4.0
   - email-validator=2.3.0
   - email_validator=2.3.0
   - exceptiongroup=1.3.1
@@ -42,15 +42,15 @@ dependencies:
   - fontconfig=2.15.0
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.61.0
+  - fonttools=4.61.1
   - freetype=2.14.1
   - graphite2=1.3.14
   - greenlet=3.3.0
   - h2=4.3.0
-  - harfbuzz=12.2.0
+  - harfbuzz=12.3.0
   - hpack=4.1.0
   - hyperframe=6.1.0
-  - icu=75.1
+  - icu=78.2
   - idna=3.11
   - importlib-metadata=8.7.0
   - iniconfig=2.3.0
@@ -60,7 +60,7 @@ dependencies:
   - keyutils=1.6.3
   - kiwisolver=1.4.9
   - krb5=1.21.3
-  - lcms2=2.17
+  - lcms2=2.18
   - ld_impl_linux-64=2.45
   - ldap3=2.9.1
   - lerc=4.0.0
@@ -69,8 +69,8 @@ dependencies:
   - libbrotlidec=1.2.0
   - libbrotlienc=1.2.0
   - libcblas=3.11.0
-  - libclang-cpp21.1=21.1.7
-  - libclang13=21.1.7
+  - libclang-cpp21.1=21.1.8
+  - libclang13=21.1.8
   - libcups=2.3.3
   - libdeflate=1.25
   - libdrm=2.4.125
@@ -85,28 +85,28 @@ dependencies:
   - libgfortran=15.2.0
   - libgfortran5=15.2.0
   - libgl=1.7.0
-  - libglib=2.86.2
+  - libglib=2.86.3
   - libglvnd=1.7.0
   - libglx=1.7.0
   - libgomp=15.2.0
   - libiconv=1.18
   - libjpeg-turbo=3.1.2
   - liblapack=3.11.0
-  - libllvm21=21.1.7
+  - libllvm21=21.1.8
   - liblzma=5.8.1
   - libnsl=2.0.1
   - libntlm=1.8
   - libopenblas=0.3.30
   - libopengl=1.7.0
   - libpciaccess=0.18
-  - libpng=1.6.53
+  - libpng=1.6.54
   - libpq=18.1
   - libsodium=1.0.20
-  - libsqlite=3.51.1
+  - libsqlite=3.51.2
   - libstdcxx=15.2.0
   - libstdcxx-ng=15.2.0
   - libtiff=4.7.1
-  - libuuid=2.41.2
+  - libuuid=2.41.3
   - libvulkan-loader=1.4.328.1
   - libwebp-base=1.6.0
   - libxcb=1.17.0
@@ -122,25 +122,25 @@ dependencies:
   - matplotlib-base=3.10.8
   - munkres=1.1.4
   - ncurses=6.5
-  - numpy=2.3.5
+  - numpy=2.4.1
   - openjpeg=2.5.4
   - openldap=2.6.10
   - openssl=3.6.0
   - packaging=25.0
-  - pcre2=10.46
+  - pcre2=10.47
   - pendulum=3.1.0
-  - pillow=12.0.0
+  - pillow=12.1.0
   - pip=25.3
   - pixman=0.46.4
   - pluggy=1.6.0
-  - psycopg2=2.9.10
+  - psycopg2=2.9.11
   - pthread-stubs=0.4
   - pyasn1=0.6.1
   - pycparser=2.22
   - pygments=2.19.2
-  - pynacl=1.6.1
-  - pyparsing=3.2.5
-  - pyside6=6.9.3
+  - pynacl=1.6.2
+  - pyparsing=3.3.1
+  - pyside6=6.10.1
   - pysocks=1.7.1
   - pytest=9.0.2
   - python=3.11.14
@@ -148,25 +148,25 @@ dependencies:
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qhull=2020.2
-  - qt6-main=6.9.3
-  - readline=8.2
+  - qt6-main=6.10.1
+  - readline=8.3
   - requests=2.32.5
   - setuptools=80.9.0
   - six=1.17.0
   - sniffio=1.3.1
   - sqlalchemy=1.4.46
-  - time-machine=3.1.0
+  - time-machine=3.2.0
   - tk=8.6.13
-  - tomli=2.3.0
-  - tornado=6.5.2
+  - tomli=2.4.0
+  - tornado=6.5.4
   - typing_extensions=4.15.0
-  - tzdata=2025b
+  - tzdata=2025c
   - unicodedata2=17.0.0
-  - urllib3=2.6.0
+  - urllib3=2.6.3
   - uwsgi=2.0.31
   - visitor=0.1.3
   - wayland=1.24.0
-  - werkzeug=3.1.4
+  - werkzeug=3.1.5
   - wheel=0.45.1
   - wtforms=3.2.1
   - xcb-util=0.4.1
